# statements-manager

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  poc.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  statements_manager.py
.cursor/rules/: developing-process-rules.mdc
.github/workflows/: docs.yml  format.yml  pypi.yml  test.yml
config/: default.toml  docs_sample.toml  interactive_sample.toml  local_sample.toml  sample.toml  user.toml
docs/: commands.rst  conf.py  examples.rst  files_organization.rst  how_to_run.rst  how_to_use.rst  index.rst  poly.py  preprocess.py  privacy_policy.md  privacy_policy.rst  problem_config.rst  problemset_config.rst  quickstart.rst  register_credentials.rst  requirements.in  requirements.txt  terms_of_service.md  terms_of_service.rst  what_is_this.rst  write_problem_statement.rst
docs/_templates/: versions.html
docs/codes/quickstart/: constraints.hpp  problem.toml  statement.md  statement_hardcode.md
docs/codes/reference/: problem.toml  problemset.toml  sample_input_format.md
docs/polyversion-templates/: index.html
docs/polyversion-templates/root/: index.html
docs/polyversion-templates/versions/: versions.html
sample/: problemset.toml  project.toml
sample/A/: A.html  A.md  problem.toml  ss-config.toml
sample/A/statement/: statement.md  statement_en.md  statement_ja.md
sample/A/tests/: 00_sample_00.in  00_sample_00.md  A.md  constraints.hpp  statement.md
sample/B/: B.html  B.md  problem.toml  ss-config.toml  style.css
sample/B/statement/: statement.md  statement_ja.md
sample/C/: problem.toml
sample/D/: problem.toml
sample/H/: 00_sample_00.in  00_sample_01.in  H.html  problem.toml  ss-config.toml
sample/I/: I.html  I.md  problem.toml  ss-config.toml
sample/assets/: template.html
sample/templates/: default.html  sample_default.html
sample_tex/: problemset.toml
sample_tex/A/: problem.toml
sample_tex/templates/: problem.tex  sample_io.tex
src/: project_file.py  variables_converter.py  variants_converter.py
src/manager/: base_manager.py  docs_manager.py  local_manager.py
src/params_maker/: lang_to_class.py  params_maker.py
statements_manager/: main.py  template.py
statements_manager/src/: convert_task_runner.py  execute_config.py  manager.py  output_file_kind.py  project.py  project_file.py  recognize_mode.py  render_result_cache.py  renderer.py  setup_problem.py  statement_location_mode.py  utils.py  variables_converter.py
tests/: test_auth_priority.py  test_convert_task_runner.py  test_e2e.py  test_execute_config.py  test_fail_on_suggestions.py  test_hello.py  test_setup_problem.py  test_utils.py  test_variables_converter.py
(+78 files in other folders)
