[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Utilities

[options.extras_require]
dev =
    flake8
    isort
    black
    mypy

[flake8]
max-line-length = 88

[mypy]

[mypy-*.*]
ignore_missing_imports = True

[isort]
profile=black
