[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Utilities
license = Apache-2.0

[options.extras_require]
dev =
    flake8
    isort
    black
    mypy
    pytest

[flake8]
max-line-length = 100

[mypy]

[mypy-*.*]
ignore_missing_imports = True

[isort]
profile=black
